--- a/impl/gwsynthesis/dual_5640_syn_resource.html
+++ b/impl/gwsynthesis/dual_5640_syn_resource.html
@@ -68,7 +68,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">32</td>
 <td align = "center">-</td>
-<td align = "center">120</td>
+<td align = "center">106</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -104,7 +104,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">31</td>
 <td align = "center">-</td>
-<td align = "center">110</td>
+<td align = "center">121</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -120,14 +120,23 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--u_cmos_add
  (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/src/dual_ov5640_lcd.v)</td>
-<td align = "center">26</td>
+<td align = "center">25</td>
 <td align = "center">-</td>
-<td align = "center">59</td>
+<td align = "center">89</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_fifo_pong
+ (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/src/cmos_add.v)</td>
+<td align = "center">89</td>
+<td align = "center">32</td>
+<td align = "center">647</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">259</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_fifo_splicing
  (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/src/cmos_add.v)</td>
 <td align = "center">89</td>
 <td align = "center">32</td>
@@ -156,11 +165,11 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--gw_gao_inst_0
  (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/impl/gwsynthesis/RTL_GAO/gw_gao_top.v)</td>
-<td align = "center">416</td>
+<td align = "center">335</td>
 <td align = "center">-</td>
-<td align = "center">327</td>
+<td align = "center">293</td>
 <td align = "center">-</td>
-<td align = "center">81</td>
+<td align = "center">70</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--DDR3_MIG
@@ -176,7 +185,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
  (C:/Users/Baymax/Desktop/GoWin/dual_ov5640_for_GOWIN/1028/DUAL-OV5640-for-GOWIN/src/dual_ov5640_lcd.v)</td>
 <td align = "center">33</td>
 <td align = "center">-</td>
-<td align = "center">67</td>
+<td align = "center">68</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
