增加输出信号使能

--- a/impl/pnr/dual_5640.pin.html
+++ b/impl/pnr/dual_5640.pin.html
@@ -74,7 +74,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue Nov 02 21:29:36 2021
+<td>Thu Nov 11 16:07:35 2021
 </td>
 </tr>
 <tr>
@@ -559,6 +559,63 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
+</tr>
+<tr>
+<td class="label">cmos0_en</td>
+<td></td>
+<td>W20/3</td>
+<td>Y</td>
+<td>in</td>
+<td>IOR77[A]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.5</td>
+</tr>
+<tr>
+<td class="label">cmos1_en</td>
+<td></td>
+<td>V20/3</td>
+<td>Y</td>
+<td>in</td>
+<td>IOR77[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.5</td>
+</tr>
+<tr>
+<td class="label">splicing_en</td>
+<td></td>
+<td>R19/3</td>
+<td>Y</td>
+<td>in</td>
+<td>IOR56[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>1.5</td>
 </tr>
 <tr>
 <td class="label">tms_pad_i</td>
@@ -6583,7 +6640,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.5</td>
 </tr>
 <td class="label">R19/3</td>
-<td>-</td>
+<td>splicing_en</td>
 <td>in</td>
 <td>IOR56[B]</td>
 <td>LVCMOS18</td>
@@ -6594,7 +6651,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
@@ -6695,7 +6752,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.5</td>
 </tr>
 <td class="label">W20/3</td>
-<td>-</td>
+<td>cmos0_en</td>
 <td>in</td>
 <td>IOR77[A]</td>
 <td>LVCMOS18</td>
@@ -6706,12 +6763,12 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
 <td class="label">V20/3</td>
-<td>-</td>
+<td>cmos1_en</td>
 <td>in</td>
 <td>IOR77[B]</td>
 <td>LVCMOS18</td>
@@ -6722,7 +6779,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
