:memo:更新Cortex-M3上的固件，更新README

--- a/peripherals_app/PROJECT/Objects/peripherals_app.build_log.htm
+++ b/peripherals_app/PROJECT/Objects/peripherals_app.build_log.htm
@@ -26,36 +26,17 @@ Project File Date:  11/13/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'peripherals_app'
-assembling startup_GOWIN_M3.s...
-compiling system_GOWIN_M3.c...
-compiling GOWIN_M3_ddr3.c...
-compiling GOWIN_M3_misc.c...
-compiling GOWIN_M3_rtc.c...
-compiling GOWIN_M3_i2c.c...
-compiling GOWIN_M3_spi_flash.c...
-compiling GOWIN_M3_gpio.c...
-compiling GOWIN_M3_spi.c...
-compiling GOWIN_M3_ethernet.c...
-compiling core_cm3.c...
-compiling GOWIN_M3_timer.c...
-compiling GOWIN_M3_uart.c...
-compiling app.c...
-compiling cmd_line.c...
-cmd_line.h(12): warning:  #1295-D: Deprecated declaration start_cmd_line - give arg types
-  void start_cmd_line();
-cmd_line.c: 1 warning, 0 errors
-compiling GOWIN_M3_wdog.c...
-compiling app_if.c...
-compiling retarget.c...
-compiling GOWIN_M3_it.c...
-compiling malloc.c...
+Build target 'peripherals_app'
 compiling main.c...
 ..\PROJECT\cmd_line.h(12): warning:  #1295-D: Deprecated declaration start_cmd_line - give arg types
   void start_cmd_line();
 ..\USER\main.c: 1 warning, 0 errors
+compiling cmd_line.c...
+cmd_line.h(12): warning:  #1295-D: Deprecated declaration start_cmd_line - give arg types
+  void start_cmd_line();
+cmd_line.c: 1 warning, 0 errors
 linking...
-Program Size: Code=3932 RO-data=1188 RW-data=16 ZI-data=8416  
+Program Size: Code=3956 RO-data=1720 RW-data=16 ZI-data=8416  
 FromELF: creating hex file...
 After Build - User command #1: E:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin  -o  app.bin .\Objects\peripherals_app.axf
 ".\Objects\peripherals_app.axf" - 0 Error(s), 2 Warning(s).
@@ -71,7 +52,7 @@ Package Vendor: ARM
   E:\Keil_v5\Pack\ARM\CMSIS\5.7.0\Device\ARM\ARMCM3\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
