--- a/impl/pnr/gowin_empu_m3.pin.html
+++ b/impl/pnr/gowin_empu_m3.pin.html
@@ -58,7 +58,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
-<td>C:\Users\hankg\OneDrive\Works\Gowin\Cortex-M3-DualCam\src\gowin_empu_m3.sdc</td>
+<td>---</td>
 </tr>
 <tr>
 <td class="label">GOWIN Version</td>
@@ -74,7 +74,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Sun Nov 14 14:39:04 2021
+<td>Wed Nov 24 19:55:29 2021
 </td>
 </tr>
 <tr>
@@ -140,26 +140,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">UART0RXD_i</td>
-<td></td>
-<td>L20/2</td>
-<td>Y</td>
-<td>in</td>
-<td>IOR35[B]</td>
-<td>LVCMOS33</td>
-<td>NA</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <tr>
 <td class="label">cam0_pclk</td>
@@ -580,19 +561,114 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>3.3</td>
 </tr>
 <tr>
-<td class="label">UART0TXD_o</td>
+<td class="label">cmos0_en</td>
 <td></td>
-<td>K20/2</td>
+<td>AB7/5</td>
 <td>Y</td>
-<td>out</td>
-<td>IOR35[A]</td>
+<td>in</td>
+<td>IOB36[B]</td>
 <td>LVCMOS33</td>
-<td>8</td>
+<td>NA</td>
 <td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
+</tr>
+<tr>
+<td class="label">cmos1_en</td>
+<td></td>
+<td>V7/5</td>
+<td>Y</td>
+<td>in</td>
+<td>IOB4[B]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
+</tr>
+<tr>
+<td class="label">splicing_en</td>
+<td></td>
+<td>AA3/5</td>
+<td>Y</td>
+<td>in</td>
+<td>IOB9[B]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
+</tr>
+<tr>
+<td class="label">tms_pad_i</td>
+<td></td>
+<td>N22/2</td>
+<td>N</td>
+<td>in</td>
+<td>IOR42[B]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
 <td>NA</td>
 <td>NA</td>
 <td>OFF</td>
-<td>FAST</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">tck_pad_i</td>
+<td></td>
+<td>N20/2</td>
+<td>N</td>
+<td>in</td>
+<td>IOR43[A]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">tdi_pad_i</td>
+<td></td>
+<td>M20/2</td>
+<td>N</td>
+<td>in</td>
+<td>IOR43[B]</td>
+<td>LVCMOS33</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
@@ -1076,10 +1152,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">O_ddr_cs_n</td>
 <td></td>
-<td>W20/3</td>
+<td>Y10/5</td>
 <td>N</td>
 <td>out</td>
-<td>IOR77[A]</td>
+<td>IOB42[A]</td>
 <td>SSTL15</td>
 <td>8</td>
 <td>NA</td>
@@ -1088,7 +1164,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
@@ -1264,213 +1340,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.5</td>
 </tr>
 <tr>
-<td class="label">SWDIO</td>
+<td class="label">tdo_pad_o</td>
 <td></td>
-<td>AB1/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB17[A]</td>
+<td>M22/2</td>
+<td>N</td>
+<td>out</td>
+<td>IOR42[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>UP</td>
 <td>NA</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">SWCLK</td>
-<td></td>
-<td>AB2/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB17[B]</td>
-<td>LVCMOS33</td>
-<td>NA</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">cmos0_en</td>
-<td></td>
-<td>AB7/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB36[B]</td>
-<td>LVCMOS33</td>
-<td>NA</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">cmos1_en</td>
-<td></td>
-<td>V7/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB4[B]</td>
-<td>LVCMOS33</td>
-<td>NA</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">splicing_en</td>
-<td></td>
-<td>AA3/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB9[B]</td>
-<td>LVCMOS33</td>
-<td>NA</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">OUT1</td>
-<td></td>
-<td>AB6/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB27[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">OUT2</td>
-<td></td>
-<td>AB8/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB37[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">OUT3</td>
-<td></td>
-<td>Y5/5</td>
-<td>Y</td>
-<td>io</td>
-<td>IOB6[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">LED1</td>
-<td></td>
-<td>U17/3</td>
-<td>Y</td>
-<td>io</td>
-<td>IOR82[B]</td>
-<td>LVCMOS15</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>1.5</td>
-</tr>
-<tr>
-<td class="label">LED2</td>
-<td></td>
-<td>U19/3</td>
-<td>Y</td>
-<td>io</td>
-<td>IOR83[A]</td>
-<td>LVCMOS15</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.5</td>
-</tr>
-<tr>
-<td class="label">LED3</td>
-<td></td>
-<td>U18/3</td>
-<td>Y</td>
-<td>io</td>
-<td>IOR83[B]</td>
-<td>LVCMOS15</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>1.5</td>
+<td>3.3</td>
 </tr>
 <tr>
 <td class="label">cam0_sda</td>
@@ -3167,7 +3053,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">U7/5</td>
 <td>-</td>
@@ -3183,7 +3069,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">W5/5</td>
 <td>-</td>
@@ -3199,7 +3085,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">W6/5</td>
 <td>-</td>
@@ -3215,7 +3101,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">V6/5</td>
 <td>-</td>
@@ -3231,7 +3117,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">V7/5</td>
 <td>cmos1_en</td>
@@ -3247,7 +3133,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y4/5</td>
 <td>-</td>
@@ -3263,23 +3149,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y5/5</td>
-<td>OUT3</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOB6[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
 </tr>
 <td class="label">V8/5</td>
 <td>-</td>
@@ -3295,7 +3181,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">V9/5</td>
 <td>-</td>
@@ -3311,7 +3197,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y3/5</td>
 <td>-</td>
@@ -3327,7 +3213,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AA3/5</td>
 <td>splicing_en</td>
@@ -3343,29 +3229,29 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB1/5</td>
-<td>SWDIO</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOB17[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB2/5</td>
-<td>SWCLK</td>
+<td>-</td>
 <td>in</td>
 <td>IOB17[B]</td>
-<td>LVCMOS33</td>
+<td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -3375,7 +3261,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y6/5</td>
 <td>-</td>
@@ -3391,7 +3277,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AA6/5</td>
 <td>-</td>
@@ -3407,7 +3293,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">W7/5</td>
 <td>-</td>
@@ -3423,7 +3309,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">W8/5</td>
 <td>-</td>
@@ -3439,7 +3325,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB3/5</td>
 <td>sys_rst_n</td>
@@ -3455,7 +3341,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB4/5</td>
 <td>-</td>
@@ -3471,7 +3357,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y7/5</td>
 <td>-</td>
@@ -3487,7 +3373,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y8/5</td>
 <td>-</td>
@@ -3503,7 +3389,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">V10/5</td>
 <td>-</td>
@@ -3519,7 +3405,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">V11/5</td>
 <td>-</td>
@@ -3535,7 +3421,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB5/5</td>
 <td>-</td>
@@ -3551,23 +3437,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB6/5</td>
-<td>OUT1</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOB27[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
 </tr>
 <td class="label">W9/5</td>
 <td>-</td>
@@ -3583,7 +3469,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y9/5</td>
 <td>-</td>
@@ -3599,7 +3485,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AA7/5</td>
 <td>-</td>
@@ -3615,7 +3501,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB7/5</td>
 <td>cmos0_en</td>
@@ -3631,7 +3517,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AA8/5</td>
 <td>-</td>
@@ -3647,23 +3533,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB8/5</td>
-<td>OUT2</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOB37[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
 </tr>
 <td class="label">W10/5</td>
 <td>-</td>
@@ -3679,7 +3565,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">W11/5</td>
 <td>-</td>
@@ -3695,7 +3581,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AA11/5</td>
 <td>-</td>
@@ -3711,7 +3597,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB11/5</td>
 <td>-</td>
@@ -3727,23 +3613,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y10/5</td>
-<td>-</td>
-<td>in</td>
+<td>O_ddr_cs_n</td>
+<td>out</td>
 <td>IOB42[A]</td>
-<td>LVCMOS18</td>
-<td>NA</td>
-<td>UP</td>
-<td>NA</td>
-<td>NONE</td>
+<td>SSTL15</td>
+<td>8</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
+<td>FAST</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>NA</td>
+<td>1.5</td>
 </tr>
 <td class="label">Y11/5</td>
 <td>-</td>
@@ -3759,7 +3645,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB9/5</td>
 <td>-</td>
@@ -3775,7 +3661,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB10/5</td>
 <td>-</td>
@@ -3791,7 +3677,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.5</td>
 </tr>
 <td class="label">AB12/4</td>
 <td>-</td>
@@ -6290,26 +6176,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>3.3</td>
 </tr>
 <td class="label">K20/2</td>
-<td>UART0TXD_o</td>
-<td>out</td>
-<td>IOR35[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<td class="label">L20/2</td>
-<td>UART0RXD_i</td>
+<td>-</td>
 <td>in</td>
-<td>IOR35[B]</td>
-<td>LVCMOS33</td>
+<td>IOR35[A]</td>
+<td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -6317,7 +6187,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<td class="label">L20/2</td>
+<td>-</td>
+<td>in</td>
+<td>IOR35[B]</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
@@ -6354,10 +6240,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>3.3</td>
 </tr>
 <td class="label">M22/2</td>
-<td>-</td>
+<td>tdo_pad_o</td>
 <td>out</td>
 <td>IOR42[A]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>8</td>
 <td>UP</td>
 <td>NA</td>
@@ -6365,15 +6251,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>OFF</td>
 <td>FAST</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
 <td class="label">N22/2</td>
-<td>-</td>
+<td>tms_pad_i</td>
 <td>in</td>
 <td>IOR42[B]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -6381,15 +6267,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
 <td class="label">N20/2</td>
-<td>-</td>
+<td>tck_pad_i</td>
 <td>in</td>
 <td>IOR43[A]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -6397,15 +6283,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
 <td class="label">M20/2</td>
-<td>-</td>
+<td>tdi_pad_i</td>
 <td>in</td>
 <td>IOR43[B]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>NA</td>
@@ -6413,7 +6299,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>3.3</td>
 </tr>
@@ -6866,18 +6752,18 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.5</td>
 </tr>
 <td class="label">W20/3</td>
-<td>O_ddr_cs_n</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOR77[A]</td>
-<td>SSTL15</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
+<td>UP</td>
+<td>NA</td>
+<td>NONE</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>FAST</td>
-<td>NA</td>
-<td>OFF</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
@@ -6946,50 +6832,50 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>1.5</td>
 </tr>
 <td class="label">U17/3</td>
-<td>LED1</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOR82[B]</td>
-<td>LVCMOS15</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
 <td class="label">U19/3</td>
-<td>LED2</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOR83[A]</td>
-<td>LVCMOS15</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
 <td class="label">U18/3</td>
-<td>LED3</td>
-<td>io</td>
+<td>-</td>
+<td>in</td>
 <td>IOR83[B]</td>
-<td>LVCMOS15</td>
-<td>8</td>
+<td>LVCMOS18</td>
+<td>NA</td>
 <td>UP</td>
 <td>NA</td>
 <td>NONE</td>
-<td>OFF</td>
-<td>FAST</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.5</td>
 </tr>
